<resources>
    <string name="app_name">SEPO</string>
    <string name="name_app">Sepo</string>
    <string name="greeting_app">Welcome Back, </string>
    <string name="title_information">Enter your information below.</string>
    <string name="button_login">Continue</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_to_register">Create Account</string>
    <string name="title_username">Full Name</string>
    <string name="content_description">Logo Sepo</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="title_greeting">Hallo, $Name Semoga sukses app nya</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="greeting_app_register">Welcome to Sepo</string>
    <string name="username">Username</string>
    <string name="hint_username">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="title_to_login">Login</string>
    <string name="greeting_home">Hi, Bang Stivan</string>
    <string name="home_title_btn_1">Rekap test\n\nLihat detail</string>
    <string name="home">Home</string>
    <string name="education">Education</string>
    <string name="exercise">Exercise</string>
    <string name="profile">Profile</string>
    <string name="title_education">Lanjutan Materi Edukasi</string>
    <string name="materi_osteoarthritis">Materi Osteoarthritis</string>
    <string name="your_web_client_id">720940238037-bb7f2g9k9hilfg2gs790iefmta74vq5t.apps.googleusercontent.com</string>
    <string name="ipv4">192.168.1.12</string>
    <string name="title_greeting_user">Hi, %1$s</string>
    <string name="title_logo_home_1">Pre Test</string>
    <string name="title_logo_home_2">Post Test</string>
    <string name="title_logo_home_3">Konsultasi</string>
    <string name="title_materi">Rekomendasi Materi</string>
    <string name="view_all">View all</string>
    <string name="example_answer">Ini benar</string>
    <string name="example_question">sebutkan apa lah itu</string>
    <string name="number_question">Pertanyaan 1</string>
    <string name="question_number">Pertanyaan</string>
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="umur">Umur</string>
    <string name="berat_badan">Berat (dalam kg)</string>
    <string name="tinggi_badan">Tinggi Badan (dalam cm)</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="consult">Consult</string>
    <string name="edukasi">Edukasi</string>
    <string name="materi_edukasi">Materi Edukasi</string>
    <string name="logo_app">Logo App</string>
    <string name="pilih_profil">Pilih Profil</string>
    <string name="tambahkan_akun">Tambahkan Akun</string>
    <string name="dr_ismail_extrant">Dr Ismail Extrant</string>
    <string name="say_something">Say something...</string>
    <string name="icon_send">icon send</string>
    <string name="akun">Akun</string>
    <string name="skor_behaviour">Skor Behaviour</string>
    <string name="skor_hrqol">Skor HRQoL</string>
    <string name="skor_knowledge">Skor Knowledge</string>
    <string name="default_score">0/100</string>
    <string name="ubah_data_diri">Ubah Data Diri</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="log_out">Log Out</string>
    <string name="icon_help">icon help</string>
    <string name="profil_picture">profil picture</string>
    <string name="rekomendasi_dokter">Rekomendasi Dokter</string>
    <string name="latihan">Latihan</string>
    <string name="icon_pre_test">icon_pre_test</string>
</resources>