<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.consult.LiveChatActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dr_ismail_extrant"
        android:fontFamily="@font/inter_tight_semi_bold"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="60dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/firebase_gray"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/edit_text_shadow"
            android:hint="@string/say_something"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_send"
            android:enabled="false"
            android:layout_gravity="center"
            android:src="@drawable/outline_send_24" />
    </LinearLayout>
</LinearLayout>
