<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.bottomnav.ProfileFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akun"
        android:layout_margin="16dp"
        android:fontFamily="@font/inter_tight_medium"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profil_picture"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_picture" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_behaviour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_tight_medium"
                android:text="@string/skor_behaviour"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_hrq"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_hrq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_tight_medium"
                android:text="@string/skor_hrqol"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/tv_knowledge"
                app:layout_constraintStart_toEndOf="@id/tv_behaviour"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_knowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_tight_medium"
                android:text="@string/skor_knowledge"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_hrq"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/score_behaviour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/inter_tight_regular"
                android:text="@string/default_score"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/help_behaviour"
                app:layout_constraintStart_toStartOf="@id/tv_behaviour"
                app:layout_constraintTop_toBottomOf="@id/tv_behaviour" />

            <ImageView
                android:id="@+id/help_behaviour"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/icon_help"
                android:src="@drawable/baseline_help_center_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_behaviour"
                app:layout_constraintStart_toEndOf="@id/score_behaviour"
                app:layout_constraintTop_toBottomOf="@+id/tv_behaviour" />


            <ImageView
                android:id="@+id/help_hrq"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/icon_help"
                android:src="@drawable/baseline_help_center_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_hrq"
                app:layout_constraintStart_toEndOf="@id/score_hrq"
                app:layout_constraintTop_toBottomOf="@+id/tv_hrq" />


            <ImageView
                android:id="@+id/help_knowledge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/icon_help"
                android:src="@drawable/baseline_help_center_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_knowledge"
                app:layout_constraintStart_toEndOf="@id/score_knowledge"
                app:layout_constraintTop_toBottomOf="@+id/tv_knowledge" />


            <TextView
                android:id="@+id/score_hrq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/inter_tight_regular"
                android:text="@string/default_score"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/help_hrq"
                app:layout_constraintStart_toStartOf="@id/tv_hrq"
                app:layout_constraintTop_toBottomOf="@id/tv_hrq" />

            <TextView
                android:id="@+id/score_knowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/inter_tight_regular"
                android:text="@string/default_score"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/help_knowledge"
                app:layout_constraintStart_toStartOf="@id/tv_knowledge"
                app:layout_constraintTop_toBottomOf="@id/tv_knowledge" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/inter_tight_regular"
        android:text="@string/ubah_data_diri"
        android:textAlignment="viewStart"
        android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_score" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/inter_tight_regular"
        android:text="@string/ganti_akun"
        android:textAlignment="viewStart"
        android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/inter_tight_regular"
        android:text="@string/log_out"
        android:textAlignment="viewStart"
        android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change" />





</androidx.constraintlayout.widget.ConstraintLayout>